--- a/src/main/resources/assets/chocobos/lang/en_us.json
+++ b/src/main/resources/assets/chocobos/lang/en_us.json
@@ -6,8 +6,8 @@
   "entity.chocobos.chocobo": "Chocobo",
 
   "item.chocobos.chocobo_egg": "Chocobo Egg",
-  "item.chocobos.chocobo": "Cooked Chocobo",
-  "item.chocobos.cooked_chocobo": "Chocobo",
+  "item.chocobos.chocobo": "Chocobo",
+  "item.chocobos.cooked_chocobo": "Cooked Chocobo",
 
   "item.chocobos.leather_chocobo_armor": "Leather Chocobo Armor",
   "item.chocobos.iron_chocobo_armor": "Iron Chocobo Armor",
